tests/baselines/reference/getJavaScriptSyntacticDiagnostics16.baseline
Syntactic Diagnostics for file '/tests/cases/fourslash/getJavaScriptSyntacticDiagnostics16.ts':
/tests/cases/fourslash/a.js(1,13): error TS8009: The '?' modifier can only be used in TypeScript files.


==== /tests/cases/fourslash/a.js (1 errors) ====
    function F(p?) { }
                ~
!!! error TS8009: The '?' modifier can only be used in TypeScript files.